# CBF-Enhanced-DRL-AGV-Trajectory-Planning

./: Readme.md
Gazebo Env/: CMakeLists.txt  README.md  package.xml
Gazebo Env/config/: double_ackermann_controller.yaml  gamepad.yaml  pointcloud_merger.yaml  pointcloud_to_scan.yaml
Gazebo Env/config/joints/: frame_wheel1.yaml  frame_wheel10.yaml  frame_wheel2.yaml  frame_wheel20.yaml  frame_wheel3.yaml  frame_wheel30.yaml  frame_wheel4.yaml  frame_wheel40.yaml
Gazebo Env/launch/: agv_4wis.launch.py  env1.launch.py  env2.launch.py
Gazebo Env/models/agv_robot/: model.config  model.sdf
Gazebo Env/models/agv_robot/meshes/visual/: Shape11.dae  Shape2.dae  Shape6.dae  Shape8.dae  fastHokuyo_body.dae  fastHokuyo_body1_0.dae  manifest.json  velodyneVPL_16.dae
Gazebo Env/rviz/: agv_4wis.rviz
Gazebo Env/src/: double_ackermann_controller.cpp  gamepad_teleop.cpp  hide_collisions_gui_plugin.cpp  joint_controller_plugin.cpp  pointcloud_merger.cpp  pointcloud_to_scan.cpp
Gazebo Env/worlds/: agv_4wis.world  comparison_env1.world  comparison_env2.world
Simulation Env/: control_demo.py
algorithm/: cbf-ppo.py  compute_cbf.py
